--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Basit Ali - Resume</title>
+        <title>NguyenTrongNhan - Resume</title>
         <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
         <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
         <link rel="stylesheet" type="text/css" href="resources/css/style.css">
@@ -24,13 +24,13 @@
             <div class="col span-1-of-3 personal">
                 <div class="personal-header">
                     <img src="resources/img/profile_pic2.png" alt="Profile picture">
-                    <h1>Basit Ali</h1>
+                    <h1>NguyenTrongNhan</h1>
                     <p>Software Engineer</p>
                 </div>
                 <div class="personal-details">
                     <div class="personal-info">
                         <ion-icon name="mail"></ion-icon>
-                        <a href="mailto:rjbasitali@gmail.com" target="_blank">rjbasitali@gmail.com</a>
+                        <a href="mailto:rjbasitali@gmail.com" target="_blank">trongnhan0567@gmail.com</a>
                     </div>
                     <div class="personal-info">
                         <ion-icon name="call"></ion-icon>
@@ -38,15 +38,15 @@
                     </div>
                     <div class="personal-info">
                         <ion-icon name="logo-linkedin"></ion-icon>
-                        <a href="https://www.linkedin.com/in/rjbasitali/" target="_blank">rjbasitali</a>
+                        <a href="https://www.linkedin.com/in/rjbasitali/" target="_blank">TrongNhan</a>
                     </div>
                     <div class="personal-info">
                         <ion-icon name="logo-github"></ion-icon>
-                        <a href="https://github.com/rjbasitali" target="_blank">rjbasitali</a>
+                        <a href="https://github.com/rjbasitali" target="_blank">TrongNhan</a>
                     </div>
                     <div class="personal-info">
                         <ion-icon name="globe-outline"></ion-icon>
-                        <a href="https://rjbasitali.com" target="_blank">rjbasitali.com</a>
+                        <a href="https://rjbasitali.com" target="_blank">TrongNhan.com</a>
                     </div>
 
                     <h3>Education</h3>
