--- a/index.html
+++ b/index.html
@@ -51,23 +51,17 @@
 
                     <h3>Education</h3>
                     <div class="personal-ed">
-                        <p class="personal-ed-bold">BS in Software Engineering</p>
-                        <p class="personal-ed-light">University of Karachi<br>2012 - 2015</p>
-                    </div>
-                    <div class="personal-ed">
-                        <p class="personal-ed-bold">Intermediate (Pre-Engineering)</p>
-                        <p class="personal-ed-light">PECHS College Karachi<br>2006 - 2008</p>
+                        <p class="personal-ed-light">Sai Gon University <br>2023 - 2028</p>
                     </div>
 
                     <h3>Languages</h3>
                     <div class="personal-ed">
-                        <p class="personal-ed-bold">Urdu <span>(Native)</span></p>
                         <p class="personal-ed-bold">English <span>(Professional)</span></p>
                     </div>
 
                     <h3>Interests</h3>
                     <div class="personal-ed">
-                        <p class="personal-ed-light">Digital Painting</p>
+                        <p class="personal-ed-light">Volleyball</p>
                         <p class="personal-ed-light">Football</p>
                         <p class="personal-ed-light">Swimming</p>
                         <p class="personal-ed-light">Games</p>
